src/test/ui/issues/issue-17651.stderr
error[E0277]: the size for values of type `[{integer}]` cannot be known at compilation time
  --> $DIR/issue-17651.rs:5:18
   |
LL |     (|| Box::new(*(&[0][..])))();
   |                  ^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[{integer}]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required by `std::boxed::Box::<T>::new`

error[E0277]: the size for values of type `[{integer}]` cannot be known at compilation time
  --> $DIR/issue-17651.rs:5:9
   |
LL |     (|| Box::new(*(&[0][..])))();
   |         ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[{integer}]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: all function arguments must have a statically known size
   = help: unsized locals are gated as an unstable feature

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
